<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario_oscuro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logo_blanco_resized" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtRegistroNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/nombre_usuario"
        android:textColor="#FFFFFF"
        android:textColorHint="#C8C8C8" />

    <EditText
        android:id="@+id/edtRegistroContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#C8C8C8" />

    <EditText
        android:id="@+id/edtRegistroContrasena2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/repetir_contrasena"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#C8C8C8" />

    <EditText
        android:id="@+id/edtRegistroNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#C8C8C8" />

    <EditText
        android:id="@+id/edtRegistroCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#C8C8C8" />

    <EditText
        android:id="@+id/edtRegistroTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/telefono_10_digitos"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#C8C8C8" />

    <Button
        android:id="@+id/btnRegistroRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/secundario_oscuro"
        android:onClick="registrarseClick"
        android:text="@string/registrasre" />

    <Button
        android:id="@+id/btnRegistroRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/secundario_claro"
        android:onClick="regresarClick"
        android:text="@string/regresar" />
</LinearLayout>