<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevaSesionActivity">
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nueva_sesion"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/datos_contacto"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/nombre_dos_puntos"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etContactoNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:ems="10"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/telefono_dos_puntos"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etContactoTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:ems="10"
                        android:hint="@string/telefono_ejemplo"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="83dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:singleLine="false"
                        android:text="@string/correo_dos_puntos"
                        android:textSize="16sp"
                        app:autoSizeTextType="none" />

                    <EditText
                        android:id="@+id/etContactoCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="90"
                        android:ems="10"
                        android:hint="@string/correo_ejemplo"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/datos_sesion"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="131dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/lugar"
                        android:textSize="20sp"
                        app:autoSizeTextType="none" />

                    <Spinner
                        android:id="@+id/spSesionLugar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:entries="@array/lugares" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/fecha_hora"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvFechaSel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/sin_fecha"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnSeleccionarFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/secundario_oscuro"
                        android:onClick="seleccionarFechaClick"
                        android:text="@string/seleccionar_fecha" />

                    <TextView
                        android:id="@+id/tvHoraSel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/sin_hora"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnSesionHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/secundario_oscuro"
                        android:onClick="popTimePicker"
                        android:text="@string/seleccionar_hora" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/nombre_sesion"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edtNuevaSesionNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:ems="10"
                        android:hint="@string/ejemplo_nombre_sesion"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/elige_paquete"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spSesionPaquete"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:entries="@array/paquetes" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAgendarNuevaSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/secundario_claro"
                    android:onClick="agendarSesionClick"
                    android:text="@string/agendar" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secundario_claro"
                    android:onClick="cancelarClick"
                    android:text="@string/cancelar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>