<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMisSesiones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/mis_sesiones"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtBienvenida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/bienvenido" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnAcercaDe"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="acercaDeClick"
            app:srcCompat="@drawable/ic_baseline_info_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:text="@string/ordenar_por"
            android:textAlignment="textEnd" />

        <Spinner
            android:id="@+id/sp_ordenar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:entries="@array/ordenar"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fecha"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_sesiones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:clickable="true"
        android:layout_margin="10dp"
        android:listSelector="@drawable/list_selector"/>

    <Button
        android:id="@+id/btnAgendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="8"
        android:backgroundTint="@color/secundario_claro"
        android:onClick="agendarSesionClick"
        android:text="@string/agendar_nueva_sesion"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/secundario_oscuro"
        android:onClick="cerrarSesionClick"
        android:text="@string/cerrar_sesion" />

</LinearLayout>